--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,77 +13,182 @@
  *= require_tree .
  *= require_self
  */
- body, header, h1, section, article, div, ul, li {
-   margin: 0;
-   padding: 0;
-   border: 0;
+body, header, h1, section, article, div, ul, li {
+  margin: 0;
+  padding: 0;
+  border: 0;
 
-   font:inherit;
-   text-align: inherit;
-   text-decoration: inherit;
+  font:inherit;
+  text-align: inherit;
+  text-decoration: inherit;
 
-   background: transparent;
- }
+  background: transparent;
+}
 
- ul {
-   list-style: none;
- }
+ul {
+  list-style: none;
+}
 
- .group:after {
-   content: "";
-   display: block;
-   clear: both;
- }
+.group:after {
+  content: "";
+  display: block;
+  clear: both;
+}
 
- body{
-   text-align: center;
-   font: sans-serif;
- }
+body {
+  text-align: center;
+  font: sans-serif;
+}
 
- h1{
-   font-size: 12px;
-   text-align: center;
- }
+h1 {
+  font-size: 12px;
+  text-align: center;
+}
 
- .game-board {
-   display: block;
-   width: 500px;
-   height: 500px;
-   margin: auto;
-   border: 5px solid black;
-   background: #7D360C;
- }
+.game-board {
+  display: block;
+  width: 600px;
+  height: 600px;
+  margin: auto;
+  border: 5px solid black;
+  background: #7D360C;
+}
 
- .game-board > ul {
-   display: block;
-   float: left;
-   width: 100%;
-   height: 10px;
- }
+.game-board > ul {
+  display: block;
+  float: left;
+  width: 100%;
+  height: 20px;
+}
 
- .game-board > ul > li {
-   display: block;
-   float: left;
-   width: 8px;
-   height: 8px;
-   border: 1px solid black;
- }
+.game-board > ul > li {
+  display: block;
+  float: left;
+  width: 20px;
+  height: 20px;
+}
 
- .snake1 {
-   background: #2C8A1B;
- }
+.game-board > ul > li.snake1 {
+  background: #2C8A1B;
+  width: 18px;
+  height: 18px;
+  border-right: 1px solid #1C5711;
+  border-left: 1px solid #1C5711;
+  border-bottom: 1px solid #1C5711;
+  border-top: 1px solid #1C5711;
+}
 
- .snake2 {
-   background: #180DC9;
- }
+.game-board > ul > li.snake2 {
+  background: #180DC9;
+  width: 18px;
+  height: 18px;
+  border-right: 1px solid #120A96;
+  border-left: 1px solid #120A96;
+  border-bottom: 1px solid #120A96;
+  border-top: 1px solid #120A96;
+}
 
- .portal {
-   background: #120F4A;
- }
 
- .apple {
-   background: #C91000;
-   -moz-border-radius: 5px;
- 	-webkit-border-radius: 5px;
- 	border-radius: 5px;
- }
+.game-board > ul > li.snake1.headE {
+  border-right: 10px solid #1C5711;
+  border-left: 0;
+  border-bottom: 1px solid #1C5711;
+  border-top: 1px solid #1C5711;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 10px;
+}
+
+.game-board > ul > li.snake1.headW {
+  border-right: 0;
+  border-left: 10px solid #1C5711;
+  border-bottom: 1px solid #1C5711;
+  border-top: 1px solid #1C5711;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  width: 10px;
+}
+
+.game-board > ul > li.snake1.headN {
+  border-right: 1px solid #1C5711;
+  border-left: 1px solid #1C5711;
+  border-bottom: 0;
+  border-top: 10px solid #1C5711;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  height: 10px;
+}
+
+.game-board > ul > li.snake1.headS {
+  border-right: 1px solid #1C5711;
+  border-left: 1px solid #1C5711;
+  border-bottom: 10px solid #1C5711;
+  border-top: 0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  height: 10px;
+}
+
+
+.game-board > ul > li.snake2.headE {
+  border-right: 10px solid #120A96;
+  border-left: 0;
+  border-bottom: 1px solid #120A96;
+  border-top: 1px solid #120A96;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 10px;
+}
+
+.game-board > ul > li.snake2.headW {
+  border-right: 0;
+  border-left: 10px solid #120A96;
+  border-bottom: 1px solid #120A96;
+  border-top: 1px solid #120A96;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  width: 10px;
+}
+
+.game-board > ul > li.snake2.headN {
+  border-right: 1px solid #120A96;
+  border-left: 1px solid #120A96;
+  border-bottom: 0;
+  border-top: 10px solid #120A96;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  height: 10px;
+}
+
+.game-board > ul > li.snake2.headS {
+  border-right: 1px solid #120A96;
+  border-left: 1px solid #120A96;
+  border-bottom: 10px solid #120A96;
+  border-top: 0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  height: 10px;
+}
+
+
+.game-board > ul > li.tunnel {
+  background: #4A2007;
+  border: 1px solid #633E27;
+  width: 18px;
+  height: 18px;
+  -moz-border-radius: 9px;
+  -webkit-border-radius: 9px;
+  border-radius: 9px;
+  font-size: 10px;
+  color: white;
+}
+
+.game-board > ul > li.apple {
+  border: 1px solid #960C00;
+  background: #C91000;
+  width: 18px;
+  height: 18px;
+  -moz-border-radius: 9px;
+  -webkit-border-radius: 9px;
+  border-radius: 9px;
+}
