--- a/app/assets/templates/gameBoard.jst.ejs
+++ b/app/assets/templates/gameBoard.jst.ejs
@@ -2,6 +2,21 @@
 <% if(X > 30) { x = x/2;}%>
 
 <section class="games-selection-menu" style="height: <%=x*20 + 10%>px">
+  <a class="menu-item" href="#snake">
+    <label for="">
+      SNAKE
+    </label>
+  </a>
+  <a class="menu-item" href="#asteroids">
+    <label for="">
+      ASTEROID
+    </label>
+  </a>
+  <a class="menu-item" href="#spaceinvaders">
+    <label for="">
+      INVADER
+    </label>
+  </a>
 </section>
 
 <article class="game-board group" style="width: <%=x*20%>px; height: <%=x*20%>px;">
