--- a/app/assets/templates/snakeSetup.jst.ejs
+++ b/app/assets/templates/snakeSetup.jst.ejs
@@ -1,4 +1,19 @@
 <section class="games-selection-menu" style="height: 609px">
+  <a class="menu-item" href="#snake">
+    <label for="">
+      SNAKE
+    </label>
+  </a>
+  <a class="menu-item" href="#asteroids">
+    <label for="">
+      ASTEROID
+    </label>
+  </a>
+  <a class="menu-item" href="#spaceinvaders">
+    <label for="">
+      INVADER
+    </label>
+  </a>
 </section>
 
 <section class="snake-options">
