got high score working

--- a/app/assets/templates/gameBoard.jst.ejs
+++ b/app/assets/templates/gameBoard.jst.ejs
@@ -39,3 +39,9 @@
 
 <section class="snake-score" style="height: <%=x*20 + 10%>px">
 </section>
+<section class="modal-snake-game">
+
+</section>
+<section class="snake-highscore-form-area">
+
+</section>
