--- a/app/assets/templates/restartSnake.jst.ejs
+++ b/app/assets/templates/restartSnake.jst.ejs
@@ -1,8 +1,8 @@
 <section class="snake-modal">
   You have lost!
   <br>
-  <h1>Press enter to play again!</h1>
+  <h1>Push Play Again or Press enter to play again!</h1>
+  <button class="restart-snake">Play Again</button>
   <br>
   <h1>Press backspace for snake menu</h1>
 <section>
-<button class="restart-snake">Play Again</button>
