--- a/app/assets/templates/snakescore.jst.ejs
+++ b/app/assets/templates/snakescore.jst.ejs
@@ -7,3 +7,7 @@
 <br>
 
 <button class="snake-menu">Main Menu</button>
+<br>
+<br>
+Press H or click to open
+<button class="snake-high-score-button">High Score</button>
