--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,41 @@ h1 {
   font-size: 12px;
   text-align: center;
 }
+
+.modal-snake-game {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background: rgba(255,255,255,.7);
+}
+.visible{
+  display: block;
+}
+
+.snake-modal {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background: rgba(255,255,255,.7);
+}
+
+.snake-high-score-form {
+  display: block;
+  position: absolute;
+  height: 70px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  background: rgba(255,255,255,1);
+}
+
 .arcade-window {
   display:block;
   position: absolute;
@@ -190,7 +225,7 @@ h1 {
 
 .game-board > ul > li.snake.headE {
   border-right: 1px solid #1C5711;
-  border-left: 0;
+  border-left: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
   border-top-right-radius: 10px;
@@ -198,7 +233,7 @@ h1 {
 }
 .game-board > ul > li#resize-li.snake.headE {
   border-right: 1px solid #1C5711;
-  border-left: 0;
+  border-left: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
   border-top-right-radius: 5px;
@@ -206,7 +241,7 @@ h1 {
 }
 
 .game-board > ul > li.snake.headW {
-  border-right: 0;
+  border-right: 1px solid #1C5711;
   border-left: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
@@ -215,7 +250,7 @@ h1 {
 }
 .game-board > ul > li#resize-li.snake.headW {
   border-left: 1px solid #1C5711;
-  border-right: 0;
+  border-right: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
   border-top-left-radius: 5px;
@@ -226,7 +261,7 @@ h1 {
 .game-board > ul > li.snake.headN {
   border-right: 1px solid #1C5711;
   border-left: 1px solid #1C5711;
-  border-bottom: 0;
+  border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
@@ -234,7 +269,7 @@ h1 {
 .game-board > ul > li#resize-li.snake.headN {
   border-right: 1px solid #1C5711;
   border-left: 1px solid #1C5711;
-  border-bottom: 0;
+  border-bottom: 1px solid #1C5711;
   border-top: 1px solid #1C5711;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
@@ -244,14 +279,14 @@ h1 {
   border-right: 1px solid #1C5711;
   border-left: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
-  border-top: 0;
+  border-top: 1px solid #1C5711;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 .game-board > ul > li#resize-li.snake.headS {
   border-right: 1px solid #1C5711;
   border-left: 1px solid #1C5711;
-  border-top: 0;
+  border-top: 1px solid #1C5711;
   border-bottom: 1px solid #1C5711;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
