starting asteroids 3djs working on it

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,3 +1,4 @@
 <script>SnakeGame.arcade = "<%= asset_path( 'arcade.png' ) %>"</script>
+<script>SnakeGame.star = "<%= asset_path( 'particle.png' ) %>"</script>
 <article class="currentView">
 </article>
