adding space darkness

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,4 +1,6 @@
 <script>SnakeGame.arcade = "<%= asset_path( 'arcade.png' ) %>"</script>
 <script>SnakeGame.star = "<%= asset_path( 'particle.png' ) %>"</script>
+<script>SnakeGame.asteroid = "<%= asset_path( 'asteroid.jpeg' ) %>"</script>
+
 <article class="currentView">
 </article>
