--- a/app/assets/templates/gameSelect.jst.ejs
+++ b/app/assets/templates/gameSelect.jst.ejs
@@ -3,5 +3,6 @@
   <h1> WELCOME TO KANG'S ARCADE </h1>
   <h1> PICK YOUR GAME </h1>
   <a href="#snake"><label class="root-menu-item">SNAKE</label></a>
+  <a href="#asteroid"><label class="root-menu-item">ASTEROID</label></a>
 </section>
 <img class ="arcade-window" src="<%=SnakeGame.arcade  %>" alt="" />
