--- a/app/assets/stylesheets/asteroids.css
+++ b/app/assets/stylesheets/asteroids.css
@@ -27,3 +27,18 @@ p {
   margin: 0;
   padding: 5px;
 }
+
+#asteroid-canvas {
+  cursor: crosshair;
+  font-family: Georgia, Helvetica, sans-serif;
+  font-weight: bold;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
