updated ship model

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,6 +1,6 @@
 <script>SnakeGame.arcade = "<%= asset_path( 'arcade.png' ) %>"</script>
 <script>SnakeGame.star = "<%= asset_path( 'particle.png' ) %>"</script>
 <script>SnakeGame.asteroid = "<%= asset_path( 'asteroid.jpeg' ) %>"</script>
-
+<script>SnakeGame.spaceship = "<%= asset_path( 'spaceship_back.png' ) %>"</script>
 <article class="currentView">
 </article>
