--- a/app/assets/stylesheets/asteroids.css
+++ b/app/assets/stylesheets/asteroids.css
@@ -1,7 +1,7 @@
 #hud {
   bottom: 10px;
   position: absolute;
-  right: 10px;
+  width: 100%;
   z-index: 100;
 }
 #credits {
@@ -21,6 +21,16 @@
   z-index: 100;
   background: grey;
 }
+#backView {
+  background-color: #EEEEEE;
+  border: 1px solid black;
+  bottom: 10px;
+  right: 10px;
+  position: absolute;
+  z-index: 100;
+  background: grey;
+}
+
 p {
   background-color: #EEEEEE;
   border: 1px solid black;
