--- a/app/assets/templates/asteroids.jst.ejs
+++ b/app/assets/templates/asteroids.jst.ejs
@@ -22,7 +22,30 @@
         <%= score %>
       </span>
       <br />
+    High Score:
+      <span id="high_score">
+        <%= high_score %>
+      </span>
+      <br />
   </p>
 </div>
+
 <div id="credits"><p>Created by <a href="">Brian Kang</a> using <a href="http://mrdoob.github.com/three.js/">Three.js</a><br />WASD to move, Space to shoot<br /> 1 bonus life every 5000 points</p></div>
-<section id="backView" width="300" height="300"></section>
+
+<section id="backView" width="300" height="300">
+  <a class="menu-item" href="#snake">
+    <label for="">
+      SNAKE
+    </label>
+  </a>
+  <a class="menu-item" href="#asteroids">
+    <label for="">
+      ASTEROID
+    </label>
+  </a>
+  <!-- <a class="menu-item" href="#spaceinvaders">
+    <label for="">
+      INVADER
+    </label>
+  </a> -->
+</section>
