--- a/app/assets/templates/gameBoard.jst.ejs
+++ b/app/assets/templates/gameBoard.jst.ejs
@@ -12,11 +12,11 @@
       ASTEROID
     </label>
   </a>
-  <a class="menu-item" href="#spaceinvaders">
+  <!-- <a class="menu-item" href="#spaceinvaders">
     <label for="">
       INVADER
     </label>
-  </a>
+  </a> -->
 </section>
 
 <article class="game-board group" style="width: <%=x*20%>px; height: <%=x*20%>px;">
