--- a/app/assets/templates/snakeSetup.jst.ejs
+++ b/app/assets/templates/snakeSetup.jst.ejs
@@ -9,11 +9,11 @@
       ASTEROID
     </label>
   </a>
-  <a class="menu-item" href="#spaceinvaders">
+  <!-- <a class="menu-item" href="#spaceinvaders">
     <label for="">
       INVADER
     </label>
-  </a>
+  </a> -->
 </section>
 
 <section class="snake-options">
