--- a/app/assets/templates/asteroids.jst.ejs
+++ b/app/assets/templates/asteroids.jst.ejs
@@ -31,6 +31,15 @@
 </div>
 
 <div id="credits"><p>Created by <a href="">Brian Kang</a> using <a href="http://mrdoob.github.com/three.js/">Three.js</a><br />WASD to move, Space to shoot<br /> 1 bonus life every 5000 points</p></div>
+<section id="notification">
+
+</section>
+
+<section id="gameOver">
+  Game Over
+  <br>
+  <button type="button" name="button" class="restart">Restart</button>
+</section>
 
 <section id="backView" width="300" height="300">
   <a class="menu-item" href="#snake">
@@ -49,29 +58,3 @@
     </label>
   </a> -->
 </section>
-
-<script id="vertexShader" type="x-shader/x-vertex">
-uniform vec3 viewVector;
-uniform float c;
-uniform float p;
-varying float intensity;
-void main()
-{
-    vec3 vNormal = normalize( normalMatrix * normal );
-	vec3 vNormel = normalize( normalMatrix * viewVector );
-	intensity = pow( c - dot(vNormal, vNormel), p );
-
-    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-}
-</script>
-
-<!-- fragment shader a.k.a. pixel shader -->
-<script id="fragmentShader" type="x-shader/x-vertex">
-uniform vec3 glowColor;
-varying float intensity;
-void main()
-{
-	vec3 glow = glowColor * intensity;
-    gl_FragColor = vec4( glow, 1.0 );
-}
-</script>
