--- a/app/assets/templates/asteroids.jst.ejs
+++ b/app/assets/templates/asteroids.jst.ejs
@@ -30,7 +30,7 @@
   </p>
 </div>
 
-<div id="credits"><p>Created by <a href="">Brian Kang</a> using <a href="http://mrdoob.github.com/three.js/">Three.js</a><br />WASD to move, Space to shoot<br /> 1 bonus life every 5000 points</p></div>
+<div id="credits"><p>Created by <a href="">Brian Kang</a> using <a href="http://mrdoob.github.com/three.js/">Three.js</a><br />Arrow keys to move, Space to shoot<br /> 1 bonus life every 5000 points</p></div>
 <section id="notification">
 
 </section>
